--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <a href="contact.html"> My Contact</a>
   <br>
   <br>
-  <a href="Contactme.html">Contact Me</a>
+  <a href="contactme.html">Contact Me</a>
 
 </body>
 
